--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ header{
    z-index: 1;
    left: 0;
    top: 0;
-
 } 
 header h1{
     color: white;
@@ -107,4 +106,37 @@ footer{
     color: white;
     padding: 10px;
     text-align: center;
+}
+/* pseudo classes */
+nav li a:hover{
+    text-decoration: underline;    
+}
+.images li:hover{
+    position: relative;
+    top: -4px;    
+}
+form input:focus{
+    border: 4px dashed #4b4b4b;
+    outline: none;
+}
+form input:valid{
+    border: 4px solid #71d300;
+}
+form inpu:invalid{
+    border: 4px solid red;
+}
+article p::first-line{
+    font-weight: bold;
+    font-size: 1.2em;
+}
+article.join p::first-letter{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+p::selection{
+    background: red;
+    color: white;
+}
+p::after{
+    content: '.....';
 }
